# erda-book

./: .gitignore  .zenodo.json  AGENTS.md  ATTRIBUTION.md  CITATION.cff  History.md  LICENSE  LICENSE-CODE  LICENSE-FONTS  MIGRATION-v1.0.2.md  README.md  Releases.md  SUMMARY.md  anhang-a-erda-staatenarchitektur-konzentrische-kreise.md  anhang-c-europa-2.0-fahrplan-fur-eine-lebenswerte-resiliente-und-fuhrende-union.md  anhang-erda-institut-fur-demokratische-resilienz-und-transformation.md  anhang-europa-2.0-fahrplan-fur-eine-lebenswerte-resiliente-und-fuhrende-union.md  anhang-f-erda-institut-fur-demokratische-resilienz-und-transformation.md  anhang-g-zentrales-erda-glossar.md  anhang-h-zentrales-erda-glossar.md  anhang-i-zentrales-erda-glossar.md  anhang-k-qualitatssicherung.md  book.json  build-pdf.ps1  content.yaml  cspell.json  how-to-build.md  lizenz-and-offenheit.md  pandoc_header.tex  publish.yml  release-certification-v1.0.1-final.md  release-guide-v1.0.1.md  release-notes-v1.0.1.md  requirements.txt  tools  translation-instruction.md  worker-roles.md
.github/: ARCHITECTURE-OVERVIEW.md  MIGRATION-SUMMARY.md  PHASE2-STANDALONE-PACKAGE.md  README.md  TOOLS_CONSOLIDATED.md  gh_paths.py  pyproject.toml
.github/fonts/: README.md  build_ccby_cjk_font.py
.github/gitbook_worker/: README.md
.github/tests/: README.md  __init__.py  conftest.py  test_docker_container.py  test_documents_publishing.py  test_gitbook_style.py  test_pdf_integration.py  test_preprocess_md.py  test_publisher.py  test_set_publish_flag.py
.github/tools/: README.md  __init__.py  requirements.txt  (+2 more)
(+1475 files in other folders)
